# llamaforge

./: .gitignore  .gitmessage  CMakeLists.txt  README.md
.githooks/: commit-msg
docs/: architecture.md  failure_recovery.md  kv_cache_design.md  memory_management.md  startup.md
include/llamaforge/: ArenaAllocator.h  InferenceContext.h  ModelStore.h  PagedKVCache.h  SessionState.h
src/runtime/: ArenaAllocator.cpp  InferenceContext.cpp  ModelStore.cpp  PagedKVCache.cpp
src/session/: SessionState.cpp
tests/: test_memory_managers.cpp
